feat: update implementation of matching service
